Added entry to swagger docs, controller action, route
